--- a/android-tru-forms/src/main/res/layout/tru_boolean_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_boolean_view.xml
@@ -3,6 +3,7 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
+        android:id="@+id/input_data"
         android:text=""
         android:layout_width="0dp"
         android:layout_weight="6"
