--- a/android-tru-forms/src/main/res/layout/tru_group_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_group_view.xml
@@ -1,16 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    >
 
-    <TextView
-        android:id="@+id/title"
+    <LinearLayout
+        android:id="@+id/section_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/black"
+        android:background="@android:color/holo_blue_bright"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:orientation="horizontal">
+
+
+    <TextView
+        android:id="@+id/input_data"
+        android:layout_width="0dp"
+        android:layout_weight="6"
+        android:layout_height="wrap_content"
         android:textColor="@android:color/white"
         android:gravity="center_horizontal"
-        android:text="TextView" />
+        tools:text="TextView" />
 
-
-</LinearLayout>
+    <ImageView
+        android:id="@+id/expand_collapse_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_expand_more_white_24dp"
+        android:layout_gravity="end"
+        android:layout_marginEnd="8dp"
+        />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="8dp"
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_below="@+id/section_header"
+        ></LinearLayout>
+</RelativeLayout>
