--- a/android-tru-forms/src/main/res/layout/tru_string_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_string_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.TextInputLayout
-    android:id="@+id/email_container"
+    android:id="@+id/input_view_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:tools="http://schemas.android.com/tools">
