--- a/android-tru-forms/src/main/res/layout/tru_array_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_array_view.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:background="@android:color/black"
         android:orientation="horizontal">
 
@@ -18,6 +18,7 @@
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:gravity="start"
+            android:layout_gravity="center_vertical"
             android:text="TextView"
             android:textColor="@android:color/white" />
 
@@ -27,6 +28,7 @@
             android:layout_height="24dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/ic_add_circle_white_24dp" />
     </LinearLayout>
 
