--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,5 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/container"
+    android:layout_margin="16dp"
     tools:context="com.trufla.androidtruformssample.MainActivity">
 </LinearLayout>
