--- a/android-tru-forms/src/main/res/layout/tru_array_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_array_view.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:background="@android:color/black"
+        android:background="@color/colorPrimary"
         android:orientation="horizontal">
 
         <TextView
