--- a/android-tru-forms/src/main/res/layout/tru_section_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_section_view.xml
@@ -11,7 +11,7 @@
         android:id="@+id/section_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_bright"
+        android:background="@color/colorPrimaryDark"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:orientation="horizontal">
