--- a/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/ic_add_a_photo_white_24dp"
+            app:srcCompat="@drawable/ic_add_a_photo_white_24dp"
             />
     </FrameLayout>
 </android.support.constraint.ConstraintLayout>
