--- a/android-tru-forms/src/main/res/layout/activity_form.xml
+++ b/android-tru-forms/src/main/res/layout/activity_form.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="formView"
-            type="com.trufla.androidtruforms.FormFragment" />
+            type="com.trufla.androidtruforms.FormActivity" />
 
     </data>
 
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".FormFragment">
+        tools:context=".FormActivity">
 
         <LinearLayout
             android:id="@+id/form_container"
