--- a/android-tru-forms/src/main/res/layout/tru_item_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_item_view.xml
@@ -23,15 +23,15 @@
             android:layout_gravity="center_vertical"
             tools:text="TextView"
             android:textColor="@android:color/white" />
-
         <ImageView
-            android:id="@+id/add_item_img"
+            android:id="@+id/remove_item_img"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_gravity="center_vertical"
-            app:srcCompat="@drawable/ic_add_circle_white_24dp" />
+            app:srcCompat="@drawable/ic_remove_circle_white_24dp" />
+
     </LinearLayout>
 
 </LinearLayout>
