--- a/android-tru-forms/src/main/res/layout/tru_boolean_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_boolean_view.xml
@@ -3,12 +3,13 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
-        android:id="@+id/input_data"
+        android:id="@+id/title_data"
         android:text=""
         android:layout_width="0dp"
         android:layout_weight="6"
         android:layout_height="wrap_content" />
     <CheckBox
+        android:id="@+id/input_data"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
