feat::add checks to sample app and add submitted data view

--- a/app/src/main/res/layout/test_form_fragment_activity.xml
+++ b/app/src/main/res/layout/test_form_fragment_activity.xml
@@ -7,5 +7,5 @@
     android:orientation="vertical"
     android:id="@+id/container"
     android:layout_margin="16dp"
-    tools:context="com.trufla.androidtruformssample.MainActivity">
+    tools:context="com.trufla.androidtruformssample.TestFormFragment">
 </FrameLayout>
