--- a/android-tru-forms/src/main/res/layout/tru_date_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_date_pick_view.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+<android.support.constraint.ConstraintLayout android:id="@+id/input_view_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_view_container"
-        android:layout_width="0dp"
-        android:layout_weight="6"
-        android:layout_height="wrap_content">
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/input_data"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:hint="this is hint"
-            android:inputType="datetime"
-            tools:text="" />
-    </android.support.design.widget.TextInputLayout>
+    <TextView
+        android:id="@+id/input_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/date_pick_label"
+        android:labelFor="@id/input_data"
+        android:textColor="@color/colorAccent"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintTop_toTopOf="parent"></TextView>
 
-    <ImageView
-        android:id="@+id/picker"
-        android:layout_gravity="center_vertical"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        app:srcCompat="@drawable/ic_today_black_24dp"
+    <EditText
+        android:id="@+id/input_data"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/input_label"
+        android:inputType="none"
+        android:gravity="start"
+        android:focusable="true"
+        android:focusableInTouchMode="false"
+        android:clickable="true"
         />
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
