--- a/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
@@ -1,58 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:elevation="2dp"
-    android:orientation="vertical">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@android:color/transparent">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:id="@+id/photo_thumb_container"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="@android:color/white"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/title">
+        app:cardCornerRadius="8dp"
+        app:cardElevation="2dp">
 
-        <ImageView
-            android:id="@+id/photo_add"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/ic_add_primary_24dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_marginTop="16dp"
-            android:text="Add"
-            />
-    </LinearLayout>
+            app:layout_constraintTop_toTopOf="parent">
 
-    <FrameLayout
+            <ImageView
+                android:id="@+id/photo_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/ic_add_primary_24dp" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:text="Add" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
         android:id="@+id/photo_container"
-        android:visibility="gone"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@+id/title">
+        android:visibility="gone"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="2dp">
 
         <ImageView
             android:id="@+id/photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
             android:layout_gravity="center"
+            android:scaleType="centerCrop"
             app:srcCompat="@drawable/ic_add_a_photo_white_24dp" />
-    </FrameLayout>
-</android.support.constraint.ConstraintLayout>
+        <ImageView
+            android:id="@+id/photo_remove_icon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="top|end"
+
+            app:srcCompat="@drawable/ic_remove_circle_white_24dp" />
+    </android.support.v7.widget.CardView>
+</FrameLayout>
