--- a/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/container"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@android:color/transparent">
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    app:cardCornerRadius="8dp"
+    card_view:cardBackgroundColor="@android:color/transparent">
 
     <android.support.v7.widget.CardView
         android:id="@+id/photo_thumb_container"
@@ -34,7 +36,8 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="16dp"
                 android:gravity="center"
-                android:text="Add" />
+                android:textColor="@color/colorPrimary"
+                android:text="Add Photo" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -61,4 +64,4 @@
 
             app:srcCompat="@drawable/ic_remove_circle_white_24dp" />
     </android.support.v7.widget.CardView>
-</FrameLayout>
+</android.support.v7.widget.CardView>
