--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#03A9F4</color>
-    <color name="colorPrimaryDark">#0288D1</color>
-    <color name="colorAccent">#CDDC39</color>
+    <color name="colorPrimary">#fe9900</color>
+    <color name="colorPrimaryDark">#df8600</color>
+    <color name="colorAccent">#66cbff</color>
 
 </resources>
