--- a/android-tru-forms/src/main/res/layout/tru_enum_data_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_enum_data_view.xml
@@ -1,10 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/enum_pick_btn"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
+
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:background="@color/colorAccent"
-    android:textColor="@android:color/white"
-    tools:text="Select"/>
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/pick_item_btn_title"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="10dip"
+        android:textColor="@color/colorAccent"
+        tools:text="Category:" />
+
+    <Button
+        android:id="@+id/pick_item_btn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        android:background="@android:color/transparent"
+        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:text="None Selected"
+        />
+
+</LinearLayout>
