--- a/android-tru-forms/src/main/res/layout/tru_enum_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_enum_view.xml
@@ -11,6 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dip"
+        android:textColor="@color/colorAccent"
         tools:text="Category:"
         android:layout_marginBottom="5dp"/>
 
