--- a/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
@@ -1,25 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    app:cardCornerRadius="8dp"
-    card_view:cardBackgroundColor="@android:color/transparent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@android:color/transparent"
+    android:orientation="vertical"
+    app:layout_constraintTop_toTopOf="parent">
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        tools:text="Add Photo of Pink card" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/photo_thumb_container"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginStart="8dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="2dp">
+        app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_gravity="center"
+            android:orientation="vertical"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
@@ -30,14 +38,13 @@
                 app:srcCompat="@drawable/ic_add_primary_24dp" />
 
             <TextView
-                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="16dp"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
-                android:text="Add Photo" />
+                android:text="Add Photo"
+                android:textColor="@color/colorPrimary" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -45,9 +52,10 @@
         android:id="@+id/photo_container"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginStart="8dp"
         android:visibility="gone"
         app:cardCornerRadius="8dp"
-        app:cardElevation="2dp">
+        app:cardElevation="0dp">
 
         <ImageView
             android:id="@+id/photo"
@@ -56,12 +64,12 @@
             android:layout_gravity="center"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/ic_add_a_photo_white_24dp" />
+
         <ImageView
             android:id="@+id/photo_remove_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="top|end"
-
             app:srcCompat="@drawable/ic_remove_circle_white_24dp" />
     </android.support.v7.widget.CardView>
-</android.support.v7.widget.CardView>
+</LinearLayout>
