change text style and alignment in enum data view

--- a/android-tru-forms/src/main/res/layout/tru_enum_data_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_enum_data_view.xml
@@ -27,6 +27,9 @@
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:text="None Selected"
+        android:textAllCaps="false"
+        android:gravity="start|center_vertical"
+
         />
 
 </LinearLayout>
