feat:add transparent white

--- a/android-tru-forms/src/main/res/values/colors.xml
+++ b/android-tru-forms/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#fe9900</color>
     <color name="colorPrimaryDark">#df8600</color>
     <color name="colorAccent">#5BC4FF</color>
+    <color name="colorWhiteGradient">#00ffffff</color>
 
 </resources>
