--- a/android-tru-forms/src/main/res/drawable/rounded_button_with_border.xml
+++ b/android-tru-forms/src/main/res/drawable/rounded_button_with_border.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="16dp"
 
-</selector>
+    android:shape="rectangle">
+    <solid android:color="@android:color/white" />
+
+    <stroke
+        android:width="1dp"
+        android:color="@android:color/white" />
+    <corners android:radius="4dp" />
+</shape>
