--- a/android-tru-forms/src/main/res/layout/activity_tru_form.xml
+++ b/android-tru-forms/src/main/res/layout/activity_tru_form.xml
@@ -36,12 +36,14 @@
 
             <Button
                 android:id="@+id/submit_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="328dp"
+                android:layout_height="36dp"
                 android:layout_gravity="bottom"
                 android:layout_margin="16dp"
                 android:onClick="@{(v)->formView.onSubmitClicked()}"
                 android:text="Submit"
+                android:background="@drawable/rounded_button"
+                android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
