--- a/android-tru-forms/src/main/res/layout/tru_section_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_section_view.xml
@@ -13,8 +13,7 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:orientation="horizontal"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp">
+        android:paddingBottom="8dp">
 
         <View
             android:layout_width="match_parent"
@@ -28,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start|center_vertical"
             android:textColor="@android:color/black"
-            android:padding="16dp"
+            android:padding="8dp"
             android:textStyle="bold"
             tools:text="TextView" />
 
