--- a/android-tru-forms/src/main/res/layout/activity_tru_form.xml
+++ b/android-tru-forms/src/main/res/layout/activity_tru_form.xml
@@ -14,7 +14,6 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="16dp"
         android:orientation="vertical"
         tools:context=".TruFormActivity">
 
@@ -38,11 +37,11 @@
                 android:id="@+id/submit_btn"
                 android:layout_width="328dp"
                 android:layout_height="36dp"
-                android:layout_gravity="bottom"
+                android:layout_gravity="bottom|center_horizontal"
                 android:layout_margin="16dp"
                 android:onClick="@{(v)->formView.onSubmitClicked()}"
                 android:text="Submit"
-                android:background="@drawable/rounded_button"
+                android:background="@color/colorAccent"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
