--- a/android-tru-forms/src/main/res/layout/tru_section_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_section_view.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start|center_vertical"
             android:textColor="@android:color/black"
-            android:padding="8dp"
+            android:paddingStart="16dp"
             android:textStyle="bold"
             tools:text="TextView" />
 
@@ -45,8 +45,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/section_header"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
         android:layout_marginTop="8dp"
         android:orientation="vertical"></LinearLayout>
 </RelativeLayout>
