--- a/android-tru-forms/src/main/res/layout/activity_tru_navigation.xml
+++ b/android-tru-forms/src/main/res/layout/activity_tru_navigation.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <android.support.constraint.ConstraintLayout
@@ -12,21 +13,13 @@
         <LinearLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/footer"
+            />
 
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:background="@color/colorAccent"
-            app:layout_constraintBottom_toBottomOf="parent">
-
-        </LinearLayout>
+        <include layout="@layout/bottom_sections_navigation" />
     </android.support.constraint.ConstraintLayout>
-
 </ScrollView>
