convert list of double to list of interger

--- a/android-tru-forms/src/main/res/layout/tru_enum_data_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_enum_data_view.xml
@@ -28,8 +28,6 @@
         android:paddingEnd="8dp"
         android:text="None Selected"
         android:textAllCaps="false"
-        android:gravity="start|center_vertical"
-
-        />
+        android:gravity="start|center_vertical" />
 
 </LinearLayout>
