--- a/android-tru-forms/src/main/res/layout/tru_array_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_array_view.xml
@@ -1,40 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="40dp"
+    android:background="@drawable/rounded_button"
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_button"
-        android:orientation="horizontal">
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/input_data"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="6"
+        android:gravity="start"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:textColor="@android:color/white"
+        tools:text="TextView" />
 
-        <TextView
-            android:id="@+id/input_data"
-            android:layout_width="0dp"
-            android:layout_weight="6"
-            android:layout_height="wrap_content"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:gravity="start"
-            android:layout_gravity="center_vertical"
-            tools:text="TextView"
-            android:textColor="@android:color/white" />
-
-        <Button
-            android:id="@+id/add_item_img"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:text="Add More"
-            android:textColor="@color/colorAccent"
-            android:background="@drawable/rounded_button_with_border"
-            android:layout_gravity="center_vertical"
-            />
-    </LinearLayout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/add_item_img"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Add More"
+        android:textAllCaps="false"
+        app:cornerRadius="4dp" />
 
 </LinearLayout>
