--- a/android-tru-forms/src/main/res/layout/tru_boolean_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_boolean_view.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/title_data"
-        android:text=""
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="6"
-        android:layout_height="wrap_content" />
-    <CheckBox
+        android:text="" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
         android:id="@+id/input_data"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        />
+        android:layout_weight="1" />
+
 </LinearLayout>
