--- a/android-tru-forms/src/main/res/layout/tru_date_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_date_pick_view.xml
@@ -1,32 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/input_view_con_date"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_margin="16dp">
-        <TextView
-            android:id="@+id/input_label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true"
-            android:labelFor="@id/input_data"
-            android:text="@string/date_pick_label"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    android:layout_margin="16dp"
+    android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/input_data"
+<!--    <TextView-->
+<!--        android:id="@+id/input_label"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:clickable="true"-->
+<!--        android:focusable="true"-->
+<!--        android:labelFor="@id/input_data"-->
+<!--        android:text="@string/date_pick_label"-->
+<!--        android:textColor="@color/colorAccent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+<!--    -->
+<!--    <EditText-->
+<!--        android:id="@+id/input_data"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="44dp"-->
+<!--        android:clickable="true"-->
+<!--        android:focusable="true"-->
+<!--        android:focusableInTouchMode="false"-->
+<!--        android:gravity="start"-->
+<!--        android:inputType="none"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/input_label" />-->
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+        android:layout_width="match_parent"
+        android:id="@+id/input_label"
+        android:layout_height="wrap_content"
+        android:hint="@string/date_pick_label">
+
+        <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:id="@+id/input_data"
+            android:inputType="none"
             android:clickable="true"
             android:focusable="true"
             android:focusableInTouchMode="false"
-            android:gravity="start"
-            android:inputType="none"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/input_label" />
+            android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
+
 </LinearLayout>
