--- a/android-tru-forms/src/main/res/values/styles.xml
+++ b/android-tru-forms/src/main/res/values/styles.xml
@@ -1,4 +1,3 @@
 <resources>
-
-    <style name="AppTheme" parent="Theme.AppCompat.Light" />
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light" />
 </resources>
