--- a/android-tru-forms/src/main/res/layout/tru_string_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_string_view.xml
@@ -2,6 +2,7 @@
 <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/input_view_container"
+    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
