--- a/android-tru-forms/src/main/res/layout/tru_location_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_location_pick_view.xml
@@ -3,14 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_view_container"
         android:layout_width="match_parent"
-        app:endIconMode="custom"
-        app:endIconDrawable="@drawable/ic_location_on_black_24dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_height="wrap_content">
 
         <com.google.android.material.textfield.TextInputEditText
