--- a/android-tru-forms/src/main/res/values/colors.xml
+++ b/android-tru-forms/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#5BC4FF</color>
     <color name="colorWhiteGradient">#00ffffff</color>
 
+    <color name="grey">#F4F4F8</color>
+
 </resources>
