--- a/android-tru-forms/src/main/res/layout/tru_array_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_array_view.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@drawable/rounded_button"
+        android:background="@color/grey"
         android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatTextView
