--- a/android-tru-forms/src/main/res/layout/tru_enum_data_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_enum_data_view.xml
@@ -17,7 +17,7 @@
         android:paddingTop="8dp"
         android:paddingEnd="8dp"
         android:paddingBottom="8dp"
-        android:text="None Selected"
+        android:text="@string/non_selected"
         android:textAllCaps="false" />
 
 </LinearLayout>
