fix pdf viewer conflict
fix pdf viewer conflict

--- a/android-tru-forms/src/main/res/layout/pdfviewer.xml
+++ b/android-tru-forms/src/main/res/layout/pdfviewer.xml
@@ -10,11 +10,18 @@
         android:layout_height="match_parent"
         android:layout_weight="0.9">
 
-        <com.pdfview.PDFView
+   <!--     <com.pdfview.PDFView
+            android:id="@+id/doc_pdf_viewer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp" />-->
+
+        <com.github.barteksc.pdfviewer.PDFView
             android:id="@+id/doc_pdf_viewer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp" />
+
 
         <ProgressBar
             android:id="@+id/document_progress"
