--- a/android-tru-forms/src/main/res/layout/photo_viewer.xml
+++ b/android-tru-forms/src/main/res/layout/photo_viewer.xml
@@ -5,12 +5,25 @@
     android:orientation="vertical"
     android:background="@color/grey">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.9">
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/photo_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:layout_weight="0.9"/>
+        android:layout_margin="10dp" />
+
+        <ProgressBar
+            android:id="@+id/document_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="120dp"
+            android:visibility="gone"/>
+
+    </FrameLayout>
 
     <Button
         android:layout_width="120dp"
