--- a/android-tru-forms/src/main/res/layout/photo_viewer.xml
+++ b/android-tru-forms/src/main/res/layout/photo_viewer.xml
@@ -30,7 +30,7 @@
         android:layout_width="120dp"
         android:layout_height="35dp"
         android:text="@string/close"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/rounded_primary_button"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp"
         android:id="@+id/close_photoview"
