--- a/android-tru-forms/src/main/res/layout/pdfviewer.xml
+++ b/android-tru-forms/src/main/res/layout/pdfviewer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/grey">
@@ -8,9 +9,11 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.9">
+        android:layout_weight="0.9"
+        android:background="#ffffff"
+        android:layout_marginBottom="5dp">
 
-   <!--     <com.pdfview.PDFView
+   <!-- <com.pdfview.PDFView
             android:id="@+id/doc_pdf_viewer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -42,6 +45,7 @@
         android:onClick="onClosePDFViewer"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:layout_marginTop="5dp"/>
 
 </LinearLayout>
