--- a/android-tru-forms/src/main/res/layout/photo_viewer.xml
+++ b/android-tru-forms/src/main/res/layout/photo_viewer.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0.9"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        android:layout_marginBottom="5dp">
 
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/photo_view"
@@ -35,7 +36,8 @@
         android:layout_marginBottom="10dp"
         android:id="@+id/close_photoview"
         android:onClick="onClosePhotoViewer"
-        android:textColor="#ffffff"/>
+        android:textColor="#ffffff"
+        android:layout_marginTop="5dp"/>
 
 
 </LinearLayout>
