--- a/android-tru-forms/src/main/res/drawable/accent_color_gradient.xml
+++ b/android-tru-forms/src/main/res/drawable/accent_color_gradient.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/colorWhiteGradient"
+        android:startColor="@color/colorPrimary"
         android:centerY="0.08"
         android:type="linear"
         android:dither="true"
