add validation to Number Of Drivers & driver_license_number

--- a/android-tru-forms/src/main/res/layout/tru_number_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_number_view.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
 <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/input_view_container"
     android:layout_width="match_parent"
@@ -11,5 +12,25 @@
         android:layout_height="wrap_content"
         tools:hint="this is hint"
         android:inputType="numberDecimal"
-        tools:text="" />
+        tools:text=""
+        />
+</com.google.android.material.textfield.TextInputLayout>
+-->
+
+<com.google.android.material.textfield.TextInputLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/input_view_container"
+    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="16dp">
+
+<com.google.android.material.textfield.TextInputEditText
+    android:id="@+id/input_data"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:inputType="number"
+    tools:hint="this is hint"
+    tools:text="" />
 </com.google.android.material.textfield.TextInputLayout>
