--- a/android-tru-forms/src/main/res/layout/tru_number_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_number_view.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-<com.google.android.material.textfield.TextInputLayout
-    android:id="@+id/input_view_container"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:tools="http://schemas.android.com/tools">
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/input_data"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:hint="this is hint"
-        android:inputType="numberDecimal"
-        tools:text=""
-        />
-</com.google.android.material.textfield.TextInputLayout>
--->
-
-<com.google.android.material.textfield.TextInputLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/input_title"
+        android:text="title"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:visibility="visible"
+        android:textColor="@color/title_text_color"/>
+
+<com.google.android.material.textfield.TextInputLayout
     android:id="@+id/input_view_container"
     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    >
+    android:layout_margin="10dp"
+    app:hintEnabled="false">
 
 <com.google.android.material.textfield.TextInputEditText
     android:id="@+id/input_data"
@@ -34,3 +35,4 @@
     tools:hint="this is hint"
     tools:text="" />
 </com.google.android.material.textfield.TextInputLayout>
+</LinearLayout>
