--- a/android-tru-forms/src/main/res/values/colors.xml
+++ b/android-tru-forms/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="colorPrimaryLighter">#19fe9900</color>
     <color name="grey">#F4F4F8</color>
     <color name="colorAccent">#A6E2EF</color>
+    <color name="title_text_color">#545454</color>
+
 
 </resources>
