--- a/android-tru-forms/src/main/res/layout/tru_date_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_date_pick_view.xml
@@ -1,46 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/input_view_con_date"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
     android:orientation="vertical">
 
-    <!--    <TextView-->
-    <!--        android:id="@+id/input_label"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:clickable="true"-->
-    <!--        android:focusable="true"-->
-    <!--        android:labelFor="@id/input_data"-->
-    <!--        android:text="@string/date_pick_label"-->
-    <!--        android:textColor="@color/colorAccent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent" />-->
-    <!--    -->
-    <!--    <EditText-->
-    <!--        android:id="@+id/input_data"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="44dp"-->
-    <!--        android:clickable="true"-->
-    <!--        android:focusable="true"-->
-    <!--        android:focusableInTouchMode="false"-->
-    <!--        android:gravity="start"-->
-    <!--        android:inputType="none"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@id/input_label" />-->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/input_title"
+        android:text="title"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:visibility="visible"
+        android:textColor="@color/title_text_color"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_label"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/date_pick_label">
+        app:hintAnimationEnabled="false"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="6dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_data"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:clickable="true"
             android:focusable="true"
             android:focusableInTouchMode="false"
