--- a/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
+++ b/android-tru-forms/src/main/res/layout/tru_photo_pick_view.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginTop="16sp"
         tools:text="*.PDF, JPG, PNG" />
 
     <androidx.cardview.widget.CardView
@@ -21,7 +22,8 @@
         android:layout_height="100dp"
         android:layout_marginStart="8dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="0dp">
+        app:cardElevation="0dp"
+        android:layout_marginBottom="8sp">
 
         <LinearLayout
             android:layout_width="wrap_content"
